wip: change style of scrollbar

--- a/src/themes/Main.scss
+++ b/src/themes/Main.scss
@@ -10,14 +10,14 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb:vertical {
-  background: #2a3f3f;
+  background: #6987d3;
 }
 ::-webkit-scrollbar-thumb:horizontal {
-  background: #294645;
+  background: #6987d3;
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #204645;
+  background: #6987d3;
 }
